# mcp-bitcoin-cli

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-01-12-mcp-bitcoin-cli-design.md  2026-01-12-mcp-bitcoin-cli-implementation.md
src/mcp_bitcoin_cli/: __init__.py  config.py  envelope.py  primitives.py  server.py
src/mcp_bitcoin_cli/node/: __init__.py  cli.py  interface.py  rpc.py
src/mcp_bitcoin_cli/protocols/: __init__.py  base.py  brc20.py
tests/: __init__.py  test_brc20.py  test_config.py  test_coverage_gaps.py  test_envelope.py  test_integration.py  test_node_cli.py  test_node_rpc.py  test_primitives.py  test_server.py
