[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-bitcoin-cli"
version = "0.1.0"
description = "MCP server for Bitcoin OP_RETURN data operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "python-bitcoinlib>=0.12.0",
    "tomli>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-bitcoin-cli = "mcp_bitcoin_cli.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bitcoin_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
